fixed styling so that it doesnt stretch too far down pages in some displays

--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ body {
     border: 3px black solid;
     grid-gap: 0px 0px;
     margin-top: 3em;
-    height: 800px;
-    width: 800px;
+    height: 600px;
+    width: 600px;
     border-radius: 5px;
 
 }
@@ -36,8 +36,8 @@ body {
 }
 
 .buttons {
-    height: 100px;
-    width: 150px;    
+    height: 75px;
+    width: 100px;    
     font-size: 20px;
     border-radius: 5px;
     box-shadow: 1em;
@@ -55,7 +55,7 @@ body {
 }
 
 .sizeSlider {
-    width: 60%;
+    width: 40%;
     -webkit-appearance: none;
     height: 2em;
 }
